tests/paczka1/fuzzy1/41208015.err
Error in line 1: sPEJBLre S161 28,9
Error in line 3: r4c2xIq A992 23,8
Error in line 8: DXlTzyYol S995 16,9
Error in line 6: sPEJBLre S995 12,3
Error in line 10: r4c2xIq S161 18,9
Error in line 25: Y96SVb S995 67,00
Error in line 20: A992 S995 16,1
Error in line 26: A992 S320 35,5
Error in line 29: A992 A992 0,6
Error in line 37: r4c2xIq A992 51,3
